--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
-        "symfony/orm-pack": "^1.0",
+        "symfony/orm-pack": "1.0.6",
         "symfony/twig-bundle": "4.3.*",
         "symfony/yaml": "4.3.*",
         "twig/twig": "^2.0"
