--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
-        "symfony/orm-pack": "1.0.6",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.3.*",
         "symfony/yaml": "4.3.*",
         "twig/twig": "^2.0"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.14"
+        "symfony/maker-bundle": "^1.14",
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
