--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "twig/twig": "^2.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/browser-kit": "4.3.*",
+        "symfony/css-selector": "4.3.*",
         "symfony/maker-bundle": "^1.14",
         "symfony/phpunit-bridge": "^4.3",
         "symfony/web-server-bundle": "4.3.*"
