--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@
         ports:
             - '8080:8080'
     web:
-        build: docker
+        build: .
         environment:
             - APP_ENV=prod
             - DATABASE_URL=mysql://root:root@db:3306/firescrum
