--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "twig/twig": "^2.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.2",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/browser-kit": "4.3.*",
         "symfony/css-selector": "4.3.*",
