--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@
             - '8080:8080'
     web:
         build: .
-        environment:
-            - APP_ENV=prod
-            - DATABASE_URL=mysql://root:root@db:3306/firescrum
+        command: 'bash -c "sh /var/www/firescrum/docker/database-create.sh && apache2-foreground"'
         ports:
             - '80:80'
