--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,8 +16,14 @@
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="default">
             <directory>tests</directory>
+        </testsuite>
+        <testsuite name="unit">
+            <directory>tests/UnitTest</directory>
+        </testsuite>
+        <testsuite name="db-integration">
+            <directory>tests/DBIntegration</directory>
         </testsuite>
     </testsuites>
 
