--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Compile resources
       run: npm run build
     - name: Create Database
-      run: php bin/console doctrine:database:create && doctrine:migration:migrate
+      run: php bin/console doctrine:database:create && php bin/console doctrine:migration:migrate
     - name: Load test database fixtures
       run: php bin/console doctrine:fixtures:load
     - name: Execute tests via PHPUnit
