[issue 42] gestion de mot de  passe reinitialisé

--- a/.env
+++ b/.env
@@ -27,3 +27,10 @@ APP_SECRET=19ae0b9858b36f374dc1afbce1d02b84
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/bd_cdp
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://firescrum2019@gmail.com:Fire@2019@localhost
+###< symfony/swiftmailer-bundle ###
