--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,8 +22,8 @@
         <testsuite name="unit">
             <directory>tests/UnitTest</directory>
         </testsuite>
-        <testsuite name="db-integration">
-            <directory>tests/DBIntegration</directory>
+        <testsuite name="integration">
+            <directory>tests/Integration</directory>
         </testsuite>
     </testsuites>
 
