--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.5",
@@ -26,6 +26,7 @@
         "symfony/browser-kit": "4.3.*",
         "symfony/css-selector": "4.3.*",
         "symfony/maker-bundle": "^1.14",
+        "symfony/panther": "^0.6.0",
         "symfony/phpunit-bridge": "^4.3",
         "symfony/web-server-bundle": "4.3.*"
     },
