--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -39,5 +39,6 @@
 
     <extensions>
         <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension"/>
+        <extension class="Symfony\Component\Panther\ServerExtension" />
     </extensions>
 </phpunit>
