--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
         "core-js": "^3.0.0",
         "eslint": "^6.7.2",
         "eslint-config-google": "^0.14.0",
+        "mocha": "^6.2.2",
+        "mysql": "^2.17.1",
+        "puppeteer": "^2.0.0",
         "regenerator-runtime": "^0.13.2"
     },
     "license": "UNLICENSED",
