[Debtfix] Optimisation du docker en permettant de définir des variables d'environnement pour l'application

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '3.7'
 services:
-    db:
-        image: mariadb:10.4
-        environment:
-            - MYSQL_ROOT_PASSWORD=root
-        ports:
-            - '3306:3306'
-    web:
-        build: .
-        command: 'bash -c "sh /var/www/firescrum/docker/database-create.sh
-         && apache2-foreground"'
-        ports:
-            - '80:80'
+  db:
+    image: mariadb:10.4
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+    ports:
+      - '3306:3306'
+  web:
+    build: .
+    environment:
+      - DATABASE_URL=mysql://root:root@db:3306/firescrum
+      - APP_ENV=prod
+    ports:
+      - '80:80'
