--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-    "devDependencies": {
+    "dependencies": {
         "@symfony/webpack-encore": "^0.28.0",
-        "core-js": "^3.0.0",
+        "core-js": "^3.0.0"
+    },
+    "devDependencies": {
         "eslint": "^6.7.2",
         "eslint-config-google": "^0.14.0",
         "mocha": "^6.2.2",
